--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -5,9 +5,10 @@
     padding: 0.88rem;
     background-color: rgba(95, 23, 23, 0.7);
     box-shadow: 0 4px 2px 2px;
+    }
 
-    ::webkit-scrollbar{
-        width: 0px';
+    ::-webkit-scrollbar{
+        width: 0px;
         background: transparent;
     }
 
@@ -17,4 +18,3 @@
             margin-bottom: 2rem;
         }
     }
-}
